<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2012 Intel Corporation, All rights Reserved.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/menu_notification_type" >
        <CheckBoxPreference
            android:title="@string/alert_notification"
            android:defaultValue="true"
            android:key="checkboxNotification" />
    <PreferenceScreen
         android:title="@string/notification_config"
         android:dependency="checkboxNotification" >
        <CheckBoxPreference
            android:title="@string/notification_sound"
            android:defaultValue="false"
            android:key="checkboxNotificationSound" />
        <CheckBoxPreference
            android:title="@string/notification_vibrator"
            android:defaultValue="false"
            android:key="checkboxNotificationVibrator" />
    </PreferenceScreen>
        <CheckBoxPreference
            android:title="@string/alert_popup"
            android:defaultValue="true"
            android:key="checkboxPopup" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/menu_modem_events" >
        <PreferenceScreen
             android:title="@string/menu_modem_exception" >
            <CheckBoxPreference
                android:title="@string/core_dump_start"
                android:defaultValue="true"
                android:key="checkboxCoreDumpStart" />
            <CheckBoxPreference
                android:title="@string/core_dump_stop"
                android:defaultValue="true"
                android:key="checkboxCoreDumpStop" />
            <CheckBoxPreference
                android:title="@string/unsolicited_reset"
                android:defaultValue="false"
                android:key="checkboxUnsolicitedReset" />
            <CheckBoxPreference
                android:title="@string/not_responsive"
                android:defaultValue="false"
                android:key="checkboxNotResponsive" />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/menu_modem_recovery" >
            <CheckBoxPreference
                android:title="@string/warm_reset"
                android:defaultValue="false"
                android:key="checkboxWarmReset" />
            <CheckBoxPreference
                android:title="@string/cold_reset"
                android:defaultValue="false"
                android:key="checkboxColdReset" />
            <CheckBoxPreference
                android:title="@string/cold_boot"
                android:defaultValue="true"
                android:key="checkboxModemReboot" />
            <CheckBoxPreference
                android:title="@string/modem_out"
                android:defaultValue="true"
                android:key="checkboxModemOut" />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/menu_fw_exception" >
            <CheckBoxPreference
                android:title="@string/fw_bad_family"
                android:defaultValue="false"
                android:key="checkboxFwFamily" />
            <CheckBoxPreference
                android:title="@string/fw_security"
                android:defaultValue="false"
                android:key="checkboxFwSecurity" />
            <CheckBoxPreference
                android:title="@string/fw_outdated"
                android:defaultValue="false"
                android:key="checkboxFwOutdated" />
            <CheckBoxPreference
                android:title="@string/fw_restricted"
                android:defaultValue="false"
                android:key="checkboxFwRestricted" />
            <CheckBoxPreference
                android:title="@string/fw_update"
                android:defaultValue="true"
                android:key="checkboxFwUpdateFailure" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceScreen        
    		android:key="@string/prefs_shared_restore_settings_key"
    		android:title="@string/prefs_shared_restore_settings_title"/>    
    </PreferenceScreen>
